# Vera360

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
android/: build.gradle  gradlew  settings.gradle
android/app/: build.gradle  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/vera360/ax360e/: EmulationActivity.java  MainActivity.java  NativeBridge.java  TouchOverlayView.java
android/app/src/main/res/drawable/: ic_launcher.xml
android/app/src/main/res/layout/: activity_emulation.xml  activity_main.xml
android/app/src/main/res/values/: strings.xml  themes.xml
android/gradle/wrapper/: gradle-wrapper.properties
cmake/: android_tweaks.cmake
src/xenia/app/: CMakeLists.txt  emulator.cc  emulator.h  jni_bridge.cc
src/xenia/apu/: CMakeLists.txt  apu_system.cc  xma_decoder.cc
src/xenia/base/: CMakeLists.txt  clock.h  clock_posix.cc  cvar.cc  cvar.h  logging.cc  logging.h  math.h  memory_posix.cc  platform_android.cc  platform_android.h  string_util.cc  string_util.h  threading.h  threading_posix.cc
src/xenia/base/memory/: memory.h
src/xenia/cpu/: CMakeLists.txt  cpu_module.cc  processor.cc  processor.h  thread_state.cc
src/xenia/cpu/backend/arm64/: arm64_backend.cc  arm64_backend.h  arm64_emitter.cc  arm64_emitter.h  arm64_sequences.cc  arm64_sequences.h
src/xenia/cpu/frontend/: ppc_decoder.cc  ppc_decoder.h  ppc_disasm.cc  ppc_interpreter.cc  ppc_interpreter.h  ppc_scanner.cc
src/xenia/gpu/: CMakeLists.txt  gpu_command_processor.cc  gpu_command_processor.h  shader_translator.cc  xenos_registers.cc  xenos_registers.h
src/xenia/gpu/vulkan/: vulkan_command_processor.cc  vulkan_device.cc  vulkan_device.h  vulkan_instance.cc  vulkan_instance.h  vulkan_pipeline_cache.cc  vulkan_render_target_cache.cc  vulkan_swap_chain.cc  vulkan_swap_chain.h  vulkan_texture_cache.cc
src/xenia/hid/: CMakeLists.txt  hid_android.cc  hid_android.h  input_system.cc
src/xenia/kernel/: CMakeLists.txt  kernel_state.cc  kernel_state.h  lzx_decoder.cc  lzx_decoder.h  xam_content.cc  xam_module.cc  xam_user.cc  xboxkrnl_io.cc  xboxkrnl_memory.cc  xboxkrnl_module.cc  xboxkrnl_threading.cc  xex2_loader.cc  xex2_loader.h  xmodule.cc  xmodule.h  xobject.cc  xobject.h  xthread.cc  xthread.h
src/xenia/vfs/: CMakeLists.txt  disc_image_device.cc  host_path_device.cc  stfs_container.cc  vfs_entry.cc  virtual_file_system.cc
